--- a/assets/base.css
+++ b/assets/base.css
@@ -2803,6 +2803,7 @@ details[open] > .header__submenu {
 
 .header__menu-item span {
   transition: text-decoration var(--duration-short) ease;
+  color: red;
 }
 
 .header__menu-item:hover span {
